Fix image path for diary PNG

--- a/about.html
+++ b/about.html
@@ -102,7 +102,7 @@
             <div class="update-carousel">
                 <div class="update-carousel-container">
                     <div class="update-carousel-item">
-                        <img src="/diary/diary_0528.2024.png" alt="0528.2024" class="diary-updates" style="width: 70%; height: auto;">
+                        <img src="diary/diary_0528.2024.png" alt="0528.2024" class="diary-updates" style="width: 70%; height: auto;">
                     </div>
                     <div class="update-carousel-item">
                         <img>
