Updated gallery page with horizontal scrolling and side text fade out effect

--- a/gallery.html
+++ b/gallery.html
@@ -21,8 +21,8 @@
         <a href="about.html">ABOUT</a>
         <a href="gallery.html">GALLERY</a>
     </div>
-    <main>
-        <section class="side-text">
+    <main class="gallery-page">
+        <section class="side-text" id="sideText">
             <p>Latifa's Gallery.</p>
         </section>
         <section class="gallery">
