Your commit message here

--- a/gallery.html
+++ b/gallery.html
@@ -21,7 +21,8 @@
         <a href="about.html">ABOUT</a>
         <a href="gallery.html">GALLERY</a>
     </div>
-    <main class="gallery-page">
+    <main>
+    <div class="gallery-page">
         <section class="side-text" id="sideText">
             <p>Latifa's Gallery.</p>
         </section>
@@ -43,6 +44,7 @@
             </div>
             <!-- Add more gallery items as needed -->
         </section>
+    </div>
     <footer>
     </footer>
     <script src="script.js"></script>
