Updated HTML file with new content

--- a/about.html
+++ b/about.html
@@ -105,6 +105,9 @@
                         <img src="diary/diary_0528.2024.png" alt="0528.2024" class="diary-updates">
                     </div>
                     <div class="update-carousel-item">
+                        <img src="diary/diary_0619.2024.png" alt="0619.2024" class="diary-updates">
+                    </div>
+                    <div>
                         <img>
                     </div>
                 </div>
