Updated HTML file with new content

--- a/about.html
+++ b/about.html
@@ -107,8 +107,8 @@
                     <div class="update-carousel-item">
                         <img src="diary/diary_0619.2024.png" alt="0619.2024" class="diary-updates">
                     </div>
-                    <div>
-                        <img>
+                    <div class="update-carousel-item">
+                        <img src="diary/diary_0705.2024.png" alt="0705.2014">
                     </div>
                 </div>
             </div>
