Update HTML file with new changes

--- a/about.html
+++ b/about.html
@@ -108,7 +108,7 @@
                         <img src="diary/diary_0619.2024.png" alt="0619.2024" class="diary-updates">
                     </div>
                     <div class="update-carousel-item">
-                        <img src="diary/diary_0705.2024.png" alt="0705.2014">
+                        <img src="diary/diary_0705.2024.png" alt="0705.2014" class="diary-updates">
                     </div>
                 </div>
             </div>
