Update HTML,CSS, and JavaScript files with new changes

--- a/about.html
+++ b/about.html
@@ -115,6 +115,13 @@
             <button class="update-carousel-button prev">Previous</button>
             <button class="update-carousel-button next">Next</button>
         </div>
+        <div>
+            <div class="diary-link">
+                <p><a href="#" data-target="0">05.28.2024 Daddy's Not at Home</a></p>
+                <p><a href="#" data-target="1">06.19.2024 It's My Birthday!</a></p>
+                <p><a href="#" data-target="2">07.05.2024 It's so Boring, Let's Be A Naughty Dog</a></p>
+            </div>
+        </div>
     </main>
 
     <footer>
