Update HTML, CSS, and JavaScript files with new changes

--- a/about.html
+++ b/about.html
@@ -103,12 +103,21 @@
                 <div class="update-carousel-container">
                     <div class="update-carousel-item">
                         <img src="diary/diary_0528.2024.png" alt="0528.2024" class="diary-updates">
+                        <div class="image-overlay mobile-only">
+                            <span>Tap to enlarge</span>
+                        </div>
                     </div>
                     <div class="update-carousel-item">
                         <img src="diary/diary_0619.2024.png" alt="0619.2024" class="diary-updates">
+                        <div class="image-overlay mobile-only">
+                            <span>Tap to enlarge</span>
+                        </div>
                     </div>
                     <div class="update-carousel-item">
                         <img src="diary/diary_0705.2024.png" alt="0705.2014" class="diary-updates">
+                        <div class="image-overlay mobile-only">
+                            <span>Tap to enlarge</span>
+                        </div>
                     </div>
                 </div>
             </div>
