Update HTML, CSS, and JavaScript files with new changes

--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     </head>
     <body>
+        <div id="loading-screen">
+            <div class="loading-content">
+                <img src="images/loading_latifa_1.png" alt="Latifa's Head" class="loading-image" id="loading-image-1">
+                <img src="images/loading_latifa_2.png" alt="Latifa's Head" class="loading-image" id="loading-image-2">
+                <div class="loading-text">Good Girl's Coming...</div>
+            </div>
+        </div>
+        
         <header>
             <div id="top"></div>
             <a href="index.html" id="home-link"><h1>LATIFA</h1></a>
