--- a/about.html
+++ b/about.html
@@ -9,6 +9,14 @@
         <link href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap" rel="stylesheet">
 </head>
 <body>
+    <div id="loading-screen">
+        <div class="loading-content">
+            <img src="images/loading_latifa_1.png" alt="Latifa's Head" class="loading-image" id="loading-image-1">
+            <img src="images/loading_latifa_2.png" alt="Latifa's Head" class="loading-image" id="loading-image-2">
+            <div class="loading-text">Good Girl's Coming...</div>
+        </div>
+    </div>
+
     <header>
         <div id="top"></div>
         <a href="index.html" id="home-link"><h1>LATIFA</h1></a>
