Update HTML, CSS, and JavaScript files with new changes

--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap" rel="stylesheet">
 </head>
-<body>
+<body id="about-page">
     <div id="loading-screen">
         <div class="loading-content">
             <img src="images/loading_latifa_1.png" alt="Latifa's Head" class="loading-image" id="loading-image-1">
