--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     </head>
-    <body>
+    <body id="home-page">
         <div id="loading-screen">
             <div class="loading-content">
                 <img src="images/loading_latifa_1.png" alt="Latifa's Head" class="loading-image" id="loading-image-1">
