--- a/gallery.html
+++ b/gallery.html
@@ -2,8 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">    <title>Gallery - LATIFA</title>
-    <link rel="stylesheet" href="styles.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">    <link rel="stylesheet" href="styles.css">
         <link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap" rel="stylesheet">
 </head>
@@ -12,7 +11,7 @@
         <div class="loading-content">
             <img src="images/loading_latifa_1.png" alt="Latifa's Head" class="loading-image" id="loading-image-1">
             <img src="images/loading_latifa_2.png" alt="Latifa's Head" class="loading-image" id="loading-image-2">
-            <div class="loading-text">Good Girl's Coming...</div>
+            <div class="loading-text">Latifa's Coming...</div>
         </div>
     </div>
 
