Update HTML, CSS, and JavaScript files with new changes

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">        <title>Latifa</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Latifa</title>
         <link rel="stylesheet" href="styles.css">
         <link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap" rel="stylesheet">
@@ -30,7 +31,7 @@
             <a href="gallery.html">GALLERY</a>
         </div>
         <main>
-            <section class="intro">
+            <section class="intro fade-in">
                 <h2><span class="big">Who's</span><br> a good girl?</h2>
                 <a href="https://www.instagram.com/_frenchie.latifa_/" class="instagram-button" target="_blank" aria-label="Follow on Instagram">
                     <i class="fab fa-instagram"></i>
@@ -40,8 +41,7 @@
                 </div>
             </section>
 
-
-            <section class="details">
+            <section class="details fade-in" data-delay="200">
                 <div class="puppy-profile">
                     <img src="images/latifa_toast.png" alt="I'm still loading with my favorite toast" class="puppy-profile-image">
                     <div class="puppy-stats">
@@ -53,8 +53,7 @@
                 </div>
             </section>
 
-
-            <section class="about">
+            <section class="about fade-in" data-delay="400">
                 <h2>ABOUT ME</h2>
                 <div class="about-content">
                     <img src="images/latifa_head_01.png" alt="This is my big head" style="width: 250px; height:auto" class="about-image about-image-01">
@@ -70,8 +69,7 @@
                 </div>
             </section>
 
-
-            <section class="addition-info">
+            <section class="addition-info fade-in" data-delay="600">
                 <h2>MY BEST FRIENDS</h2>
                 <div class="toy-container">
                     <div class="toy-wrapper">
@@ -81,7 +79,6 @@
                     <div class="toy-wrapper">
                         <img src="images/heartbeat_dog.png" alt="my best friend" class="toy-image-02">
                         <p>This is Buddy who I<br> played with long time ago.</p>
-                    </div>
                 </div>
             </section>
         </main>
