--- a/about.html
+++ b/about.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">    <link rel="stylesheet" href="styles.css">
-        <link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet">
-        <link href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap" rel="stylesheet">
 </head>
 <body id="about-page">
     <div id="loading-screen">
@@ -29,7 +30,7 @@
     </div>
 
     <main>
-        <div class="addition-info">
+        <div class="addition-info fade-in">
             <h2>Good Girl Style</h2>
             <div class="carousel">
                 <div class="carousel-container">
@@ -42,8 +43,8 @@
                 <button class="carousel-button prev">&#10094;</button>
                 <button class="carousel-button next">&#10095;</button>
             </div>
-            <div class="product-info">
-                <h2> Latifa Can't Live Without:</span></h2>
+            <div class="product-info fade-in" data-delay="200">
+                <h2>Latifa Can't Live Without:</h2>
                 <div class="product-list">
                     <ul class="list">
                         <li class="product" data-name="Collar">
@@ -99,11 +100,11 @@
                 </div>
             </div>
         </div>
-        <div class="about-section">
+        <div class="about-section fade-in" data-delay="400">
             <h2>AND<br>A Good Girl Must Have:</h2>
             <img src="images/about_latifa.png" alt="About Latifa" class="about-section-image">
         </div>
-        <div class="update">
+        <div class="update fade-in" data-delay="600">
             <h2>Latifa's Diary</h2>
             <div class="update-carousel">
                 <div class="update-carousel-container">
@@ -131,7 +132,7 @@
             <button class="update-carousel-button next">Next</button>
         </div>
         <div>
-            <div class="diary-link">
+            <div class="diary-link fade-in" data-delay="800">
                 <p><a href="#" data-target="0">05.28.2024 Daddy's Not at Home</a></p>
                 <p><a href="#" data-target="1">06.19.2024 It's My Birthday!</a></p>
                 <p><a href="#" data-target="2">07.05.2024 It's so Boring, Let's Be A Naughty Dog</a></p>
